# wazm

./: .gitignore  Cargo.toml  README.md  SECURITY.md
.docker/: env.dockerfile
.docker/node/: Dockerfile
.docker/wasm/: wasmtime.dockerfile
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: proposal.md  tracking.md
.github/workflows/: binary.yml  clippy.yml  crates.yml  rust.yml
core/: Cargo.toml  build.rs
core/src/: lib.rs
core/src/macros/: display.rs  mod.rs
wazm/: Cargo.toml
wazm/src/: lib.rs
