[workspace.package]
authors = ["Joe McCain III <jo3mccain@icloud.com>",]
categories = [ ]
description = "wazm aims to be an efficient virutalized environment orchestrating workloads across various surfaces."
edition = "2021"
homepage = "https://github.com/FL03/wazm/wiki"
keywords = [ ]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/FL03/wazm.git"
version = "0.0.0"

[workspace.dependencies]

[workspace]
default-members = [
    "wazm"
]

exclude = [

]

members = [
    "wazm",
]

resolver = "2"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
